# RiffRadar

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt  run.py
backend/src/: api.py  chroma.py  config.py  main.py  schemas.py  song_recommendation.py  youtube.py
backend/src/chroma/: chroma.py  chroma_client.py  redis.py  redis_cache.py  seed_songs.py  songs_data.json
backend/src/recommendations/: router.py  service.py
backend/src/song_recommendation/: router.py  service.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: SongRecommendations.tsx
frontend/src/hooks/: useGuitarAudio.ts  useRecommendations.ts
frontend/src/providers/: QueryProvider.tsx
frontend/src/types/: api.ts  constants.ts  guitar.ts
